<resources>
    <string name="app_name">Experience Calculator</string>
    <string name="target_level">Target level</string>
    <string name="current_xp">Current experience</string>
    <string name="xp_per_action">Experience per action</string>
    <string name="time_per_action">Time per action (optional)</string>
    <string name="required_actions">Required actions</string>
    <string name="required_time">Total time required</string>
    <string name="calculate">Calculate</string>
    <string name="i_level">Invalid level!</string>
    <string name="i_xp">Invalid amount of experience!</string>
    <string name="i_pa">Invalid amount of experience per action!</string>
    <string name="hours">&#160;hours,&#160;</string>
    <string name="minutes">&#160;minutes,&#160;</string>
    <string name="seconds">&#160;seconds.</string>
</resources>