<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTimeRequiredText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimeRequired" />

    <TextView
        android:id="@+id/textViewTimeRequired"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="151dp"
        android:textAlignment="center"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCalculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewTimePerAction" />

    <TextView
        android:id="@+id/textViewXpPerAction"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:text="@string/xp_per_action"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextXpPerAction" />

    <TextView
        android:id="@+id/textViewTimePerAction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/time_per_action"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/editTextTimePerAction"
        app:layout_constraintStart_toStartOf="@+id/editTextTimePerAction"
        app:layout_constraintTop_toBottomOf="@+id/editTextTimePerAction" />

    <EditText
        android:id="@+id/editTextTargetLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textViewTargetLevel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTargetLevel"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:text="@string/target_level"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTargetLevel" />

    <EditText
        android:id="@+id/editTextCurrentXp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textViewCurrentXp"
        app:layout_constraintTop_toBottomOf="@+id/textViewTargetLevel" />

    <TextView
        android:id="@+id/textViewCurrentXp"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/current_xp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCurrentXp" />

    <EditText
        android:id="@+id/editTextXpPerAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textViewXpPerAction"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurrentXp" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewActionsRequired"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:textAlignment="center"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toTopOf="@+id/textViewTimeRequired"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewRequiredActions"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewActionsRequired" />

    <EditText
        android:id="@+id/editTextTimePerAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="3dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/textViewXpPerAction"
        app:layout_constraintTop_toBottomOf="@+id/textViewXpPerAction" />

</androidx.constraintlayout.widget.ConstraintLayout>